---
source: desc/tests/desc_test.rs
expression: ast
input_file: desc/tests/inputs/basic.ninja
---
Description {
    builds: [
        Build {
            action: Command(
                "echo first",
            ),
            inputs: [],
            outputs: [
                [
                    102,
                    105,
                    114,
                    115,
                    116,
                ],
            ],
        },
        Build {
            action: Command(
                "echo second",
            ),
            inputs: [],
            outputs: [
                [
                    115,
                    101,
                    99,
                    111,
                    110,
                    100,
                ],
            ],
        },
        Build {
            action: Command(
                "gcc foo.c bar.c baz.c -o pasta",
            ),
            inputs: [
                [
                    102,
                    111,
                    111,
                    46,
                    99,
                ],
                [
                    98,
                    97,
                    114,
                    46,
                    99,
                ],
                [
                    98,
                    97,
                    122,
                    46,
                    99,
                ],
            ],
            outputs: [
                [
                    112,
                    97,
                    115,
                    116,
                    97,
                ],
            ],
        },
    ],
}
